# cmake_tutorial

./: .gitignore  README.md  how_to_find_an_cmake_package.md  how_to_install_an_config-package.md  how_to_write_an_cmakelist.md
catkin_ws/src/simple_ros_cmake_example/: CMakeLists.txt  package.xml
catkin_ws/src/simple_ros_cmake_example/src/: main.cpp
find_package_demo/: CMakeLists.txt  main.cpp
find_package_demo/cmake/: FindGlog.cmake
install_package_demo/: CMakeLists.txt  main.cpp
install_package_demo/cmake/: tinysplineConfig.cmake.in
install_package_demo/src/: tinysplinecpp.cpp
result/: ctrlp.csv  liao_junbo  lijiangnan  simple_curve_plot.py  yekunhong  zhyg
simple_cmake_example/: CMakeLists.txt
simple_cmake_example/include/: point.hpp
simple_cmake_example/src/: main.cpp  point.cpp
