<?xml version="1.0"?>
<package format="2">
  <name>simple_ros_cmake_example</name>
  <version>0.0.0</version>
  <description>The simple_ros_cmake_example package</description>

  <maintainer email="ytiangsky@gmail.com">yangt</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>roslib</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_cv</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
